--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,31 +3,61 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>todo list</title>
+  <!-- bootstrap and css -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <div class="box" id="heading">
-    <h1><%= listTitle %></h1>
-  </div>
 
-  <div class="box">
-    <% itemsOfList.forEach(function(item){ %>
-    <form class="" action="/delete" method="post">
-      <div class="item">
-        <input name= "checkbox" type="checkbox" value="<%=item._id%>" onchange="this.form.submit()">
-        <p name = "todo-item"> <%= item %> </p>
+  <nav class="navbar navbar-default navbar-expand-lg navbar-light bg-light ">
+    <div class="container">
+      <a class="navbar-brand" href="#HOME">Todo</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item"> <a href="/">Author</a></li>
+        </ul>
       </div>
-    </form>
+    </div>
+  </nav>
+  <div class="container-fluid">
+    <div class="box" id="heading">
+      <h1>Your lists</h1>
+    </div>
 
-    <% }) %>
+    <div class="box">
+      <% itemsOfList.forEach(function(item){ %>
+      <form action="/deleteList" method="post">
+        <div class="item">
+          <!-- <input name="checkbox" type="checkbox" value="<%=item._id%>" onchange="this.form.submit()"> -->
+          <p class="list-p" name="todo-item" onchange="this.form.submit()"> <%= item %> </p>
+          <button type="submit" name="delList" value="<%=item%>">-</button>
+        </div>
+      </form>
 
-    <form class="item" action="/" method="post">
-      <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
-      <button type="submit" name="list" value="<%= listTitle %>">+</button>
-    </form>
+      <% }) %>
+
+      <form class="item" action="/newList" method="post">
+        <input type="text" name="newList" placeholder="New List" autocomplete="off">
+        <button type="submit" name="list" value="<%= listTitle %>">+</button>
+      </form>
+    </div>
   </div>
+
+
+
+
+
+
+
+
 
 </body>
 
