--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,10 @@
   <title>todo list</title>
   <!-- bootstrap and css -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-
   <nav class="navbar navbar-default navbar-expand-lg navbar-light bg-light ">
     <div class="container">
       <a class="navbar-brand" href="#HOME">Todo</a>
@@ -41,7 +39,6 @@
           <button type="submit" name="delList" value="<%=item%>">-</button>
         </div>
       </form>
-
       <% }) %>
 
       <form class="item" action="/newList" method="post">
@@ -51,14 +48,24 @@
     </div>
   </div>
 
+  <div class="box">
+    <% itemsOfList.forEach(function(item){ %>
+      <form action="/deleteList" method="post">
+        <div class="item">
+          <!-- <input name="checkbox" type="checkbox" value="<%=item._id%>" onchange="this.form.submit()"> -->
+          <p class="list-p" name="todo-item" onchange="this.form.submit()"> <%= item %> </p>
+          <button type="submit" name="delList" value="<%=item%>">-</button>
+        </div>
+      </form>
+      <% }) %>
 
+      <form class="item" action="/newList" method="post">
+        <input type="text" name="newList" placeholder="New List" autocomplete="off">
+        <button type="submit" name="list" value="<%= listTitle %>">+</button>
+      </form>
+    </div>
 
-
-
-
-
-
-
+  </div>
 </body>
 
 </html>
